# pipeline

./: README.md  main.py  models.py  pyproject.toml  test_pipeline.py
alignment/: phonemes.py
audio/: ingest.py
mux/: ffmpeg.py
render/: frame_generator.py  renderer.py  video_writer.py
visemes/: map.py  smooth.py
